--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "build": "npm run electron:serve-tsc && ng build --base-href ./",
     "build:dev": "npm run build -- -c dev",
     "build:prod": "npm run build -- -c production",
-    "ng:serve": "ng serve -c web -o",
+    "ng:serve": "ng serve -c web",
     "electron:serve-tsc": "tsc -p tsconfig.serve.json",
     "electron:serve": "wait-on tcp:4200 && npm run electron:serve-tsc && npx electron . --serve",
     "electron:local": "npm run build:prod && npx electron .",
@@ -63,6 +63,8 @@
     "@types/jasminewd2": "2.0.8",
     "@types/mocha": "8.0.3",
     "@types/node": "12.12.6",
+    "@types/pegjs": "0.10.2",
+    "@types/underscore": "1.10.24",
     "@typescript-eslint/eslint-plugin": "4.2.0",
     "@typescript-eslint/eslint-plugin-tslint": "4.2.0",
     "@typescript-eslint/parser": "4.2.0",
@@ -95,5 +97,13 @@
   },
   "engines": {
     "node": ">=10.13.0"
+  },
+  "dependencies": {
+    "@angular/animations": "10.2.2",
+    "@ctrl/ngx-codemirror": "4.0.1",
+    "codemirror": "5.58.2",
+    "ng-zorro-antd": "10.1.0",
+    "pegjs": "0.10.0",
+    "underscore": "1.11.0"
   }
 }
